@@ -6,6 +6,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 ### Added
 
 * Add IS_LXC_OPENSMTPD check
+* Add IS_HOMENOEXEC check (#172)
 * Add IS_MONITORINGCTL check
 
 ### Changed
